--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "twrnc": "^3.6.8"
+    "twrnc": "^3.6.8",
+    "typescript": "^5.3.0",
+    "@types/react": "~18.2.45"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
